[package]
name = "wstest"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures = "0.3.31"
iroh = "0.95.1"
n0-error = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
